<resources>
    <string name="app_name">Catfiz</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_capital_off">OFF</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="svrhostname">103.11.254.67</string>
    <string name="svrport">8003</string>
    <string name="svrhostname_2">103.11.254.68</string>
    <string name="svrport_2">8003</string>
    <string name="svrhostname_3">103.11.254.69</string>
    <string name="svrport_3">8003</string>
    <string name="svrhostname_4">103.11.254.70</string>
    <string name="svrport_4">8003</string>
    <string name="svrhostname_5">103.11.254.71</string>
    <string name="svrport_5">8003</string>
    <string name="svrhostname_6">103.11.254.72</string>
    <string name="svrport_6">8003</string>
    <string name="svrhostname_7">103.11.254.73</string>
    <string name="svrport_7">8003</string>
    <string name="svrhostname_8">103.11.254.74</string>
    <string name="svrport_8">8003</string>
    <string name="svrhostname_9">103.11.254.75</string>
    <string name="svrport_9">8003</string>
    <string name="svrhostname_10">103.11.254.76</string>
    <string name="svrport_10">8003</string>
    <string name="pushhostname">103.11.254.67</string>
    <string name="pushport">8002</string>
    <string name="pushhostname2">103.11.254.68</string>
    <string name="pushport2">8002</string>
    <string name="pushhostname3">103.11.254.69</string>
    <string name="pushport3">8002</string>
    <string name="pushhostname4">103.11.254.70</string>
    <string name="pushport4">8002</string>
    <string name="pushhostname5">103.11.254.71</string>
    <string name="pushport5">8002</string>
    <string name="pushhostname6">103.11.254.72</string>
    <string name="pushport6">8002</string>
    <string name="pushhostname7">103.11.254.73</string>
    <string name="pushport7">8002</string>
    <string name="pushhostname8">103.11.254.74</string>
    <string name="pushport8">8002</string>
    <string name="pushhostname9">103.11.254.75</string>
    <string name="pushport9">8002</string>
    <string name="pushhostname10">103.11.254.76</string>
    <string name="pushport10">8002</string>
    <string name="streamhostname">103.11.252.80</string>
    <string name="streamport">8005</string>
    <string name="reghostname">103.11.253.3</string>
    <string name="regport">12000</string>
    <string name="notification_id">NOTIFICATION_ID</string>
    <string name="newmessage_notify_id">NOTIFICATION_ID</string>
    <string name="newfriendrequest_notify_id">NOTIFICATION_ID</string>
    <string name="newfriend_notify_id">NOTIFICATION_ID</string>
    <string name="pool_newmessage_notify_id">NOTIFICATION_ID</string>
    <string name="new_servermessage_notify_id">NOTIFICATION_ID</string>
    <string name="new_update_notify_id">NOTIFICATION_ID</string>
    <string name="instal_update_notify_id">NOTIFICATION_ID</string>
    <string name="topic_need_notify_id">NOTIFICATION_ID</string>
    <string name="topic_deleted_notify_id">NOTIFICATION_ID</string>
    <string name="new_nicmessage_notify_id">NOTIFICATION_ID</string>
    <string name="adjust_time_notify_id">NOTIFICATION_ID</string>
    <string name="themeupdatenotify_id">NOTIFICATION_ID</string>
    <string name="regulardelay">20000</string>
    <string name="sleepdelay">1200000</string>
    <string name="maxreschedulingage">1200000</string>
    <string name="pushchannel_delay">120000</string>
    <string name="housekeeping_delay">1200000</string>
    <string name="profile_maintenance_time">3600000</string>
    <string name="chat_delete_time">86400000</string>
    <string name="countactivity_decrease_time">1800000</string>
    <string name="check_update_time">21600000</string>
    <string name="check_register_time">43200000</string>
    <string name="two_hours">7200000</string>
    <string name="p2prunnable_maxwait">3600000</string>
    <string name="reqcode_take_photo_id">RCID</string>
    <string name="reqcode_select_photo_id">RCID</string>
    <string name="reqcode_view_image_id">RCID</string>
    <string name="reqcode_photo_picked_id">RCID</string>
    <string name="reqcode_select_video">RCID</string>
    <string name="reqcode_viewupdate_myprofile">RCID</string>
    <string name="reqcode_viewupdate_like">RCID</string>
    <string name="reqcode_add_newfriend">RCID</string>
    <string name="reqcode_add_newusergroup">RCID</string>
    <string name="reqcode_invite_friend">RCID</string>
    <string name="reqcode_broadcast_message_id">RCID</string>
    <string name="reqcode_select_file_id">RCID</string>
    <string name="reqcode_view_content_id">RCID</string>
    <string name="reqcode_sendcontact_id">RCID</string>
    <string name="reqcode_save_chat_conv">RCID</string>
    <string name="reqcode_take_video_id">RCID</string>
    <string name="pool_app_name">Catfiz Pool</string>
    <string name="gallery_app_name">Catfiz Gallery</string>
    <string name="newmessageticker">NEW message</string>
    <string name="newmessagetickerplurar">NEW messages</string>
    <string name="conversation">group</string>
    <string name="from">From \"</string>
    <string name="newmessagetitle">You have a NEW message</string>
    <string name="newfriendrequestticker">You have a NEW Friend request</string>
    <string name="newfriendrequesttitle">You have a NEW Friend request</string>
    <string name="newfriendticker">You have a NEW Friend</string>
    <string name="newfriendtitle">Has Accepted Your Friend Request</string>
    <string name="user_prepare_to_send">Prepare to send...</string>
    <string name="user_sending">Sending ...</string>
    <string name="user_send_completed">Sent</string>
    <string name="user_send_fail">Fail to send</string>
    <string name="file_received">Has been received</string>
    <string name="theme_update">new theme update found</string>
    <string name="new_themeupdate">New Theme Update</string>
    <string name="chat_notification_title">Chat Message</string>
    <string name="my_status_comment_notification_title">My Status Comments</string>
    <string name="status_comment_notification_title">Friend Status Comments</string>
    <string name="enable_chat_notif_title">Enable ringtone</string>
    <string name="enable_chat_vibrate_title">Vibrate</string>
    <string name="show_notif_title">Show Notification</string>
    <string name="notif_icon_title">Notification icon</string>
    <string name="auto_download_limit_title">Pool Auto Receive Limit</string>
    <string name="friendlist_lastactivity_title">Sort Friend List</string>
    <string name="friendlist_limit_title">Friend List View Limitation</string>
    <string name="status_receive_time_title">Status Receive Time</string>
    <string name="friendlist_lastactivity_dialog_title">Sort Friend List by:</string>
    <string name="data_out_of_date_title">Chat Message Out of Date</string>
    <string name="pool_data_out_of_date_title">Pool Message Out of Date</string>
    <string name="add_new_friend">Add New Friend</string>
    <string name="local_backup">Local Backup</string>
    <string name="about">About</string>
    <string name="phone">Phone</string>
    <string name="email">E-mail</string>
    <string name="address">Address</string>
    <string name="fizzlink">Fizzlink</string>
    <string name="numb_area_ident">+62</string>
    <string name="phone_numb">Phone Number</string>
    <string name="web">Website</string>
    <string name="note">Notes</string>
    <string name="mute_on">Mute On</string>
    <string name="reset_alias">Reset Alias</string>
    <string name="menu_title">Menu</string>
    <string name="menu_profile">View Profile</string>
    <string name="menu_chat">Open Chat</string>
    <string name="menu_set_admin">Set Group Admin</string>
    <string name="menu_remove">Remove from Group</string>
    <string name="verifying">Verifying…</string>
    <string name="text_reg_verify_msg">Please, enter 4 digit verification code sent to your email :</string>
    <string name="text_reg_verify">Verification</string>
    <string name="btn_enter">ENTER</string>
    <string name="btn_resend">RESEND</string>
    <string name="search">Search</string>
    <string name="friends_title">Friends</string>
    <string name="btn_change">CHANGE</string>
    <string name="btn_cancel">CANCEL</string>
    <string name="df_male">Male</string>
    <string name="df_female">Female</string>
    <string name="change_gender">Choose Gender</string>
    <string name="change_phone">Change Phone Number</string>
    <string name="unfriend">Unfriend</string>
    <string name="block">Block</string>
    <string name="del_chat">Delete Chats</string>
    <string name="del_group">Delete Group</string>
    <string name="clear_chat">Clear Chats</string>
    <string name="save_chat">Save Chat</string>
    <string name="local_restore">Local Restore</string>
    <string name="settings_title">Settings</string>
    <string name="account_title">Your Account</string>
    <string name="shortcut">Create Shortcut</string>
    <string name="leave">Leave Group</string>
    <string name="drop">Delete Group</string>
    <string name="invite">Invite Friends</string>
    <string name="edit_name">Edit Name</string>
    <string name="edit_foto">Edit Profile Picture</string>
    <string name="copy_nic">Copy NIC</string>
    <string name="qr">Qr Code</string>
    <string name="ecash_agree">AGREE</string>
    <string name="ecash_disagree">DISAGREE</string>
    <string name="ecash_sms_verify_title">SMS Verification</string>
    <string name="ecash_sms_verify_description">You will receive an SMS verification to validate your Mandiri e-Cash account. SMS verification cost will be charged according to operator rates.</string>
    <string name="ecash_cancel">CANCEL</string>
    <string name="ecash_submit">SUBMIT</string>
    <string name="ecash_pin_title">PIN</string>
    <string name="ecash_pin_description">Input your Mandiri E-Cash PIN to continue.</string>
    <string name="ecash_pin_hint">Mandiri E-Cash PIN (6 digits)</string>
    <string name="ecash_account">Account</string>
    <string name="ecash_balance">Balance Rp.</string>
    <string name="ecash_transferto">Transfer To:</string>
    <string name="ecash_transferno">No. \u0009</string>
    <string name="ecash_transferrp">Rp. \u0009</string>
    <string name="ecash_number">Number</string>
    <string name="ecash_amount">Amount</string>
    <string name="ecash_send">Send</string>
    <string name="list_prompt">Choose Field Type</string>
</resources>