<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/ic_qrcode_light" android:id="@id/qrcode" android:title="@string/qr" android:showAsAction="always" app:showAsAction="always" />
    <item android:icon="@drawable/ic_editpict" android:id="@id/edit_photo" android:title="@string/edit_foto" app:showAsAction="always" />
    <item android:icon="@drawable/ic_muteoff" android:id="@id/mute" android:title="@string/mute_on" app:showAsAction="always" />
    <item android:icon="@drawable/ic_edit_dark" android:id="@id/edit_name" android:title="@string/edit_name" app:showAsAction="never" />
    <item android:icon="@drawable/ic_edit_dark" android:id="@id/reset_name" android:title="@string/reset_alias" app:showAsAction="never" />
    <item android:icon="@android:drawable/ic_menu_share" android:id="@id/copy_nic" android:title="@string/copy_nic" app:showAsAction="never" />
    <item android:id="@id/unfriend" android:title="@string/unfriend" app:showAsAction="never" />
    <item android:id="@id/block" android:title="@string/block" app:showAsAction="never" />
    <item android:id="@id/delete_group" android:title="@string/del_group" app:showAsAction="never" />
    <item android:id="@id/account" android:title="@string/account_title" app:showAsAction="never" />
</menu>