<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/ic_search_light" android:id="@id/search" android:title="@string/search" app:showAsAction="collapseActionView|ifRoom" app:actionLayout="@layout/item_menu_search" />
    <item android:id="@id/friend" android:title="@string/friends_title" app:showAsAction="always" app:actionLayout="@layout/ab_menu_notif" />
    <item android:id="@id/add_friend" android:title="@string/add_new_friend" app:showAsAction="never" />
    <item android:id="@id/fizzlink" android:title="@string/fizzlink" app:showAsAction="never" />
    <item android:id="@id/settingMain" android:title="@string/settings_title" app:showAsAction="never" />
    <item android:id="@id/about" android:title="@string/about" app:showAsAction="never" />
    <item android:id="@id/backup" android:title="@string/local_backup" app:showAsAction="never" />
    <item android:id="@id/restore" android:title="@string/local_restore" app:showAsAction="never" />
</menu>