<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@id/menu_chat_view">
        <item android:id="@id/save_chat" android:title="@string/save_chat" app:showAsAction="never" />
        <item android:id="@id/del_chat" android:title="@string/del_chat" app:showAsAction="never" />
        <item android:id="@id/shortcut" android:title="@string/shortcut" app:showAsAction="never" />
    </group>
    <group android:id="@id/menu_group_view">
        <item android:icon="@drawable/ic_muteoff" android:id="@id/mute" android:title="@string/mute_on" app:showAsAction="always" />
        <item android:id="@id/save_group_chat" android:title="@string/save_chat" app:showAsAction="never" />
        <item android:id="@id/leave" android:title="@string/leave" app:showAsAction="never" />
        <item android:id="@id/drop" android:title="@string/drop" app:showAsAction="never" />
        <item android:id="@id/invite" android:title="@string/invite" app:showAsAction="never" />
        <item android:id="@id/clear" android:title="@string/clear_chat" app:showAsAction="never" />
    </group>
</menu>