<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/rl_background" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_margin="20.0dip">
        <TextView android:textSize="24.0sp" android:id="@id/tv_account" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/ecash_account" />
        <LinearLayout android:gravity="left" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="22.0sp" android:textColor="@color/gray_60percent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ecash_balance" />
            <TextView android:textSize="22.0sp" android:textColor="@color/gray_60percent" android:id="@id/tv_balance" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="\ 0" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:background="@color/gray_20percent" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="20.0dip" />
        <TextView android:textSize="20.0sp" android:textColor="@color/gray_60percent" android:gravity="left" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/ecash_transferto" />
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
            <TextView android:textSize="18.0sp" android:textColor="@color/gray_60percent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ecash_transferno" />
            <EditText android:textSize="18.0sp" android:textColor="@color/gray_60percent" android:textColorHint="@color/gray_20percent" android:id="@id/et_tujuan" android:background="#00000000" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/ecash_number" android:singleLine="true" android:inputType="number" />
        </LinearLayout>
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
            <TextView android:textSize="18.0sp" android:textColor="@color/gray_60percent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ecash_transferrp" />
            <EditText android:textSize="18.0sp" android:textColor="@color/gray_60percent" android:textColorHint="@color/gray_20percent" android:id="@id/et_jumlah" android:background="#00000000" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/ecash_amount" android:singleLine="true" android:inputType="number" />
        </LinearLayout>
        <LinearLayout android:gravity="right" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <Button android:textSize="18.0sp" android:id="@id/bt_transfer" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/ecash_send" style="@style/Button.GrayBgBlue" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>