<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="left" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="20.0dip">
        <TextView android:textSize="18.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ecash_pin_title" style="@style/Subhead1.Black" />
        <TextView android:textSize="16.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ecash_pin_description" style="@style/Body1.Trans" />
        <EditText android:textSize="16.0sp" android:textColorHint="@color/gray_20percent" android:id="@id/et_pin" android:background="#00000000" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:hint="@string/ecash_pin_hint" android:singleLine="true" android:inputType="number" style="@style/Body1.Trans" />
        <LinearLayout android:gravity="right" android:orientation="horizontal" android:background="@color/gray_30percent" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="5.0dip" />
        <LinearLayout android:gravity="right" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip">
            <Button android:id="@id/bt_cancel" android:layout_width="wrap_content" android:layout_height="36.0dip" android:text="@string/ecash_cancel" style="@style/Button.Gray" />
            <Button android:id="@id/bt_submit" android:layout_width="wrap_content" android:layout_height="36.0dip" android:text="@string/ecash_submit" style="@style/Button.Blue" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>