<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip">
        <TextView android:gravity="center_vertical" android:id="@id/tv_menu_title" android:paddingLeft="24.0dip" android:paddingRight="24.0dip" android:layout_width="fill_parent" android:layout_height="56.0dip" android:text="@string/menu_title" style="@style/Title2.Black" />
        <TextView android:gravity="center_vertical" android:id="@id/tv_menu_profile" android:background="?selectableItemBackground" android:paddingLeft="24.0dip" android:paddingRight="0.0dip" android:layout_width="fill_parent" android:layout_height="48.0dip" android:text="@string/menu_profile" style="@style/Subhead1.Black" />
        <TextView android:gravity="center_vertical" android:id="@id/tv_menu_chat" android:background="?selectableItemBackground" android:paddingLeft="24.0dip" android:paddingRight="0.0dip" android:layout_width="fill_parent" android:layout_height="48.0dip" android:text="@string/menu_chat" style="@style/Subhead1.Black" />
        <TextView android:gravity="center_vertical" android:id="@id/tv_menu_set_admin" android:background="?selectableItemBackground" android:paddingLeft="24.0dip" android:paddingRight="0.0dip" android:layout_width="fill_parent" android:layout_height="48.0dip" android:text="@string/menu_set_admin" style="@style/Subhead1.Black" />
        <TextView android:gravity="center_vertical" android:id="@id/tv_menu_remove_member" android:background="?selectableItemBackground" android:paddingLeft="24.0dip" android:paddingRight="0.0dip" android:layout_width="fill_parent" android:layout_height="48.0dip" android:text="@string/menu_remove" style="@style/Subhead1.Black" />
    </LinearLayout>
</LinearLayout>