<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="left" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="20.0dip">
        <TextView android:textSize="18.0sp" android:id="@id/tv_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ecash_sms_verify_title" style="@style/Subhead1.Black" />
        <TextView android:textSize="16.0sp" android:id="@id/tv_desc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ecash_sms_verify_description" style="@style/Body1.Trans" />
        <LinearLayout android:gravity="right" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <Button android:id="@id/bt_disagree" android:layout_width="wrap_content" android:layout_height="36.0dip" android:text="@string/ecash_disagree" style="@style/Button.Gray" />
            <Button android:id="@id/bt_agree" android:layout_width="wrap_content" android:layout_height="36.0dip" android:text="@string/ecash_agree" style="@style/Button.Blue" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>