<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:gravity="center_vertical" android:paddingLeft="24.0dip" android:paddingRight="24.0dip" android:layout_width="wrap_content" android:layout_height="56.0dip" android:text="@string/change_phone" style="@style/Title2.Black" />
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:padding="24.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:gravity="center" android:id="@id/tv_code_phone" android:background="@drawable/bg_btn_blue" android:layout_width="40.0dip" android:layout_height="fill_parent" android:text="@string/numb_area_ident" style="@style/Subhead1.White" />
            <EditText android:id="@id/et_change_phone" android:background="@drawable/edittext_selector" android:layout_width="fill_parent" android:layout_height="40.0dip" android:hint="@string/phone_numb" android:maxLines="1" android:inputType="number" style="@style/Subhead1.Black" />
        </LinearLayout>
        <LinearLayout android:gravity="center|right" android:orientation="horizontal" android:paddingRight="12.0dip" android:layout_width="fill_parent" android:layout_height="48.0dip">
            <Button android:id="@id/btn_cancel" android:layout_width="wrap_content" android:layout_height="36.0dip" android:layout_margin="4.0dip" android:text="@string/btn_cancel" style="@style/Button.Trans" />
            <Button android:id="@id/btn_action" android:layout_width="wrap_content" android:layout_height="36.0dip" android:layout_margin="4.0dip" android:text="@string/btn_change" style="@style/Button.BlueBg54" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>