<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true" android:layout_above="@id/btn_enter">
        <LinearLayout android:gravity="start" android:orientation="vertical" android:padding="32.0dip" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="16.0dip" android:text="@string/text_reg_verify" style="@style/Title24.Black" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_reg_verify_msg" style="@style/Subhead1.Black" />
            <TextView android:id="@id/tv_email" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/Subhead2.Black" />
            <com.albus.view.CustomEdittext android:id="@id/cet_code" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>
    <Button android:id="@id/btn_enter" android:layout_width="fill_parent" android:layout_height="36.0dip" android:layout_marginLeft="32.0dip" android:layout_marginRight="32.0dip" android:text="@string/btn_enter" android:layout_above="@id/btn_resend" style="@style/Button.BlueBg54" />
    <Button android:id="@id/btn_resend" android:layout_width="fill_parent" android:layout_height="36.0dip" android:layout_marginLeft="32.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="32.0dip" android:layout_marginBottom="16.0dip" android:text="@string/btn_resend" android:layout_alignParentBottom="true" style="@style/Button.Trans" />
    <View android:id="@id/view_shadow" android:background="@color/transparent54" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    <LinearLayout android:gravity="center" android:id="@id/ll_dialog" android:background="@drawable/bg_card" android:padding="24.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true">
        <ProgressBar android:layout_width="wrap_content" android:layout_height="wrap_content" android:indeterminateDrawable="@drawable/progressring" style="?android:attr/progressBarStyle" />
        <TextView android:padding="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/verifying" style="@style/Body1.Black" />
    </LinearLayout>
</RelativeLayout>