<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:gravity="center_vertical" android:paddingLeft="24.0dip" android:paddingRight="24.0dip" android:layout_width="fill_parent" android:layout_height="56.0dip" android:text="@string/change_gender" style="@style/Title2.Black" />
    <RadioGroup android:id="@id/rg_gender" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <RadioButton android:id="@id/rb_male" android:background="?selectableItemBackground" android:paddingLeft="56.0dip" android:paddingRight="0.0dip" android:layout_width="fill_parent" android:layout_height="48.0dip" android:checked="true" android:button="@drawable/albus_radiobtn" android:text="@string/df_male" style="@style/Subhead1.Black" />
        <RadioButton android:id="@id/rb_female" android:background="?selectableItemBackground" android:paddingLeft="56.0dip" android:paddingRight="0.0dip" android:layout_width="fill_parent" android:layout_height="48.0dip" android:button="@drawable/albus_radiobtn" android:text="@string/df_female" style="@style/Subhead1.Black" />
    </RadioGroup>
</LinearLayout>