<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_gravity="center" android:orientation="vertical" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:gravity="center_vertical" android:paddingLeft="24.0dip" android:paddingRight="24.0dip" android:layout_width="fill_parent" android:layout_height="56.0dip" android:text="@string/list_prompt" style="@style/Title2.Black" />
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/ll_phone" android:background="?selectableItemBackground" android:paddingLeft="24.0dip" android:paddingRight="24.0dip" android:clickable="true" android:layout_width="fill_parent" android:layout_height="48.0dip">
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_phone_dark" />
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginRight="0.0dip" android:text="@string/phone" style="@style/Subhead1.Black" />
    </LinearLayout>
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/ll_mail" android:background="?selectableItemBackground" android:paddingLeft="24.0dip" android:paddingRight="24.0dip" android:clickable="true" android:layout_width="fill_parent" android:layout_height="48.0dip">
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_email_dark" />
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:text="@string/email" style="@style/Subhead1.Black" />
    </LinearLayout>
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/ll_address" android:background="?selectableItemBackground" android:paddingLeft="24.0dip" android:paddingRight="24.0dip" android:clickable="true" android:layout_width="fill_parent" android:layout_height="48.0dip">
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_address_dark" />
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:text="@string/address" style="@style/Subhead1.Black" />
    </LinearLayout>
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/ll_web" android:background="?selectableItemBackground" android:paddingLeft="24.0dip" android:paddingRight="24.0dip" android:clickable="true" android:layout_width="fill_parent" android:layout_height="48.0dip">
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_web_dark" />
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:text="@string/web" style="@style/Subhead1.Black" />
    </LinearLayout>
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/ll_note" android:background="?selectableItemBackground" android:paddingLeft="24.0dip" android:paddingRight="24.0dip" android:clickable="true" android:layout_width="fill_parent" android:layout_height="48.0dip">
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_edit_dark" />
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:text="@string/note" style="@style/Subhead1.Black" />
    </LinearLayout>
</LinearLayout>